fix(char-intro): restore grid-gap for mobile view

--- a/src/views/Homepage/CharacterIntro/styles.module.css
+++ b/src/views/Homepage/CharacterIntro/styles.module.css
@@ -37,7 +37,7 @@
   display: grid;
   grid-template-rows: repeat(auto, 1fr);
   grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: var(--spacing-xxx-loose) var(--spacing-base);
+  gap: var(--spacing-xxx-loose) var(--spacing-base);
   margin-top: var(--spacing-x-loose);
   margin-bottom: var(--spacing-xxx-loose);
 
